--- a/.tekton/tasks.yml
+++ b/.tekton/tasks.yml
@@ -53,5 +53,5 @@ spec:
         #!/bin/bash
         set -e
         python -m pip install --upgrade pip wheel
-        pip install -r requirements.txt
+        pip install -r ./requirements.txt
         nosetests $(params.args)
